# GeneFlow

./: CMakeLists.txt  README.md  conanfile.txt  point.json  record.md  test.json
include/: check_field.h  detail.h  json_parse.h  load.h  print_field.h  use_concept.h
include/interface/: data.h  define.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  jsontest.cpp
test/data/json/: nest.json  simple.json  type_error.json
